# gpt2-real-trace-viewer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/gpt2_trace_viewer/: __main__.py  app.py  gpt2_real.py
src/gpt2_trace_viewer/application/: forward_tracer.py  trace_result.py
src/gpt2_trace_viewer/domain/: tensor_inspector.py  trace_step.py
src/gpt2_trace_viewer/infra/: model_loader.py
src/gpt2_trace_viewer/ui/: main_window.py  splash.py  step_reveal.py
src/gpt2_trace_viewer/ui/widgets/: attention_matrix_viewer.py  attention_tab.py  code_explanation.py  code_source_strings.py  code_syntax.py  code_tab.py  graph_viewer.py  output_tab.py  trace_tab.py
tests/: test_code_mapping.py  test_code_source.py
